# playful-chef-api

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  README.md  compose.yaml  docker-compose.yml  kubernetes.prod.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  provision.yaml  publish.yaml
caddy/conf/: Caddyfile
data/: csv_to_sqlite.py  database.db
index/: index_builder.py
playful_chef_api/: config.yml  crud.py  database.py  main.py  model.py  models.py  schemas.py
systemd/: playfulchef.pod  playfulchef_api.container  playfulchef_caddy.container
test_validate/: evaluate_relevance.py  evaluate_system.py
