[tool.poetry]
name = "playful-chef-api"
version = "0.1.0"
description = ""
authors = ["vklepov <vklepov@ozon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.14"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.4"
pandas = "^2.3.3"
langchain = "^1.1.3"
langchain-openai = "^1.1.1"
langgraph = "^1.0.4"
openai = "^2.9.0"
langchain-huggingface = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
ruff = "^0.0.291"
pandas = "^2.3.3"
podman-compose = "^1.5.0"

[tool.poetry.scripts]
start = "playful_chef_api.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
